Bug 421426 - KRunner should be restarted to enable/disable runners
Summary: KRunner should be restarted to enable/disable runners
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.18.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 399621 425851 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-12 18:18 UTC by ariasuni
Modified: 2020-09-18 18:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ariasuni 2020-05-12 18:18:44 UTC
SUMMARY
Enabling or disabling runners doesn’t work until KRunner is restarted.

STEPS TO REPRODUCE
1. Click on “Configure KRunner…” button
2. Enable or disable a runner
3. Test the enabled or disabled runner; it will be still be enabled or disabled respectively.
4. Restart KRunner (killing its processes and launching it again)
5. Observe the enabled/disabled runners now are enabled/disabled respectively.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 1 Alexander Lohnau 2020-05-27 13:15:23 UTC
Unfortunately it is the same for the config of most KRunner plugins (like dictionary runner etc.).

The issue is that the enabled plugins are written in the config, but it is not reloaded when it changes.
Comment 3 Alexander Lohnau 2020-07-22 04:23:00 UTC
Git commit 64d0392874f20487c227c25cf56cafddb91d9b62 by Alexander Lohnau.
Committed on 22/07/2020 at 04:22.
Pushed by alex into branch 'master'.

Implement KConfig watcher for enabled plugins and runner KCMs

M  +29   -0    src/runnermanager.cpp
M  +7    -0    src/runnermanager.h

https://invent.kde.org/frameworks/krunner/commit/64d0392874f20487c227c25cf56cafddb91d9b62
Comment 4 David Edmundson 2020-07-28 18:01:29 UTC
So it this closable?
Comment 5 Bug Janitor Service 2020-08-03 07:28:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/milou/-/merge_requests/10
Comment 6 Alexander Lohnau 2020-08-03 08:33:01 UTC
Git commit 1cb6012b3ae8de035e4a964ef168d2ea941f4c21 by Alexander Lohnau.
Committed on 03/08/2020 at 07:23.
Pushed by davidedmundson into branch 'master'.

Enable plugin config watcher
FIXED-IN: 5.20

M  +1    -0    lib/runnerresultsmodel.cpp

https://invent.kde.org/plasma/milou/commit/1cb6012b3ae8de035e4a964ef168d2ea941f4c21
Comment 7 Alexander Lohnau 2020-08-26 23:49:19 UTC
*** Bug 425851 has been marked as a duplicate of this bug. ***
Comment 8 Alexander Lohnau 2020-09-18 18:32:06 UTC
*** Bug 399621 has been marked as a duplicate of this bug. ***