Enable plugin config watcher

BUG: 421426
FIXED-IN: 5.20